# device_board_talkweb

./: BUILD.gn  EULA  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  OAT.xml  README.en.md  README.md  README_zh.md
niobe407/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  NOTICE  OAT.xml  README_zh.md  ohos.build
niobe407/applications/: BUILD.gn  Kconfig.board.applications
niobe407/applications/001_system_helloworld/: BUILD.gn  README_zh.md  hello_world.c
niobe407/applications/002_system_thread/: BUILD.gn  README_zh.md  os_thread_example.c
niobe407/applications/003_system_timer/: BUILD.gn  README_zh.md  os_timer_example.c
niobe407/applications/004_system_event/: BUILD.gn  README_zh.md  os_event_example.c
niobe407/applications/005_system_mutex/: BUILD.gn  README_zh.md  os_mutex_example.c
niobe407/applications/006_system_semp/: BUILD.gn  os_semp_example.c
niobe407/applications/007_system_message/: BUILD.gn  README_zh.md  os_message_example.c
niobe407/applications/008_system_atomic/: BUILD.gn  README_zh.md  atomic_test.c
niobe407/applications/101_peripheral_adc_temperature/: BUILD.gn  README_zh.md  adc_temperature.c  adc_temperature.h  adc_temperature_use_example.c
niobe407/applications/102_peripheral_rng_number/: BUILD.gn  README_zh.md  ramdom_number_example.c  random_number_example.c  rng_init.c  rng_init.h
niobe407/applications/103_peripheral_can_example/: BUILD.gn  README_zh.md  can_example.c  can_init.c  can_init.h
niobe407/applications/201_hdf_gpio_key/: BUILD.gn  README_zh.md  hdf_gpio_test.c
niobe407/applications/202_hdf_spi_flash/: BUILD.gn  README_zh.md  hdf_spi_test.c
niobe407/applications/203_hdf_usart/: BUILD.gn  README_zh.md  hdf_usart_test.c
niobe407/applications/204_hdf_i2c/: BUILD.gn  hdf_i2c_test.c
niobe407/applications/205_hdf_watchdog/: BUILD.gn  README_zh.md  hdf_watchdog_test.c
niobe407/applications/206_hdf_pwm/: BUILD.gn  README_zh.md  hdf_pwm_test.c
niobe407/applications/301_network_tcpclient/: BUILD.gn  README_zh.md  tcp_client.c
niobe407/applications/302_network_tcpserver/: BUILD.gn  README_zh.md  tcp_server.c
niobe407/applications/303_network_udptest/: BUILD.gn  README_zh.md  udp_test.c
niobe407/applications/308_network_iperf_server/: BUILD.gn  README_zh.md  iperf_test.c
niobe407/applications/401_file_kv_store/: BUILD.gn  README_zh.md  kv_store_test.c
niobe407/applications/402_file_fs_store/: BUILD.gn  README_zh.md  fs_test.c
niobe407/applications/501_optimization_ccmram_use/: BUILD.gn  README_zh.md  ccmram_use_example.c
niobe407/docs/software/: 固件烧录.md  固件烧录与U盘升级.md  开发环境搭建与固件编译.md  快速开发指南.md
niobe407/liteos_m/: BUILD.gn  config.gni
niobe407/liteos_m/bootloader/: BUILD.gn  STM32F407IGTx_FLASH.ld
niobe407/liteos_m/bootloader/inc/: stm32f4xx_hal_conf.h
niobe407/liteos_m/bootloader/src/: bootloader.c  stm32f4xx_it.c  system_stm32f4xx.c
niobe407/liteos_m/bsp/: BUILD.gn
niobe407/liteos_m/bsp/include/: ohos_run.h  stm32f4xx_hal_conf.h  target_config.h
niobe407/liteos_m/bsp/src/: dprintf.c  main.c  ohos_main.c  sys_service_config.c  system_stm32f4xx.c
niobe407/liteos_m/bsp/startup/: startup_stm32f407xx.s
niobe407/liteos_m/drivers/: BUILD.gn
niobe407/liteos_m/drivers/exit/: BUILD.gn
niobe407/liteos_m/drivers/gpio/: BUILD.gn
niobe407/liteos_m/drivers/hdf_base_hal/: BUILD.gn
niobe407/liteos_m/drivers/spi/: BUILD.gn
niobe407/liteos_m/drivers/spi_flash/: BUILD.gn
niobe407/liteos_m/drivers/uart/: BUILD.gn
niobe407/liteos_m/drivers/usart/: BUILD.gn
niobe407/liteos_m/drivers/watch_dog/: BUILD.gn
niobe407/liteos_m/fs/: BUILD.gn
niobe407/liteos_m/fs/littlefs/: BUILD.gn
niobe407/liteos_m/fs/littlefs/include/: littlefs.h
niobe407/liteos_m/fs/littlefs/src/: fs_init.c  littlefs.c
niobe407/liteos_m/hdf_config/: BUILD.gn  Kconfig.liteos_m.board  default.hcs  default_device_info.hcs  device_gpio_info.hcs  device_info.hcs  device_littlefs_info.hcs  device_pwm_info.hcs  device_spi_info.hcs  device_watchdog_info.hcs  hdf.hcs
niobe407/liteos_m/hdf_drivers/: BUILD.gn
niobe407/liteos_m/hdf_drivers/core/: BUILD.gn
niobe407/liteos_m/hdf_drivers/gpio/: BUILD.gn
niobe407/liteos_m/hdf_drivers/i2c/: BUILD.gn
niobe407/liteos_m/hdf_drivers/pwm/: BUILD.gn
niobe407/liteos_m/hdf_drivers/spi/: BUILD.gn
niobe407/liteos_m/hdf_drivers/uart/: BUILD.gn
niobe407/liteos_m/hdf_drivers/watchdog/: BUILD.gn
niobe407/liteos_m/lwip_adapter/: BUILD.gn  README.md
niobe407/liteos_m/lwip_adapter/include/: ethernetif.h  lwipopts.h
niobe407/liteos_m/lwip_adapter/src/: app_ethernet.c  ethernetif.c  stm32f4xx_hal_eth.c
niobe407/liteos_m/tools/: BUILD.gn
niobe407/liteos_m/tools/merge_bin/: Makefile
niobe407/pack_tools/: pack_all_in_one.sh  update_tw_libs.sh
niobe407/sdk/: BUILD.gn  config.gni
niobe407/sdk/bootloader/: Makefile
niobe407/sdk/bootloader/inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
niobe407/sdk/bootloader/src/: bootloader.c  system_stm32f4xx.c
niobe407/sdk/bsp/: BUILD.gn
niobe407/sdk/bsp/include/: ohos_run.h  program_version.h  target_config.h
niobe407/sdk/bsp/ld/: STM32F407IGTx_FLASH.ld
niobe407/sdk/bsp/lib/tw_sys_boot_src/: main.c  ohos_main.c
niobe407/sdk/bsp/src/: dprintf.c  main.c  run_sys_before.c  sys_service_config.c
niobe407/sdk/drivers/: BUILD.gn
niobe407/sdk/drivers/exit/: BUILD.gn
niobe407/sdk/drivers/gpio/: BUILD.gn
niobe407/sdk/drivers/hdf_base_hal/: BUILD.gn  README_zh.md  hdf_base_hal.c  hdf_base_hal.h
niobe407/sdk/drivers/spi/: BUILD.gn
niobe407/sdk/drivers/spi_flash/: BUILD.gn
niobe407/sdk/drivers/uart/: BUILD.gn
niobe407/sdk/fs/: BUILD.gn
niobe407/sdk/hdf_config/: BUILD.gn  device_gpio_info.hcs  device_littlefs_info.hcs  device_pwm_info.hcs  device_spi_info.hcs  device_uart_info.hcs  device_watchdog_info.hcs  hdf.hcs  hdf_gpio.hcs  hdf_littlefs.hcs  hdf_pwm.hcs  hdf_spi.hcs  hdf_uart.hcs  hdf_watchdog.hcs
niobe407/sdk/lwip_adapter/: BUILD.gn  README.md
niobe407/sdk/lwip_adapter/include/: app_ethernet.h  ethernetif.h  lwipopts.h
niobe407/sdk/tools/: BUILD.gn
(+46 files in other folders)
