# Copyright (c) 2021-2022 Talkweb Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/adapter/khdf/liteos_m/hdf.gni")

module_name = "hdf_hcs"
hdf_driver(module_name) {
  if (defined(LOSCFG_DRIVERS_HDF_PLATFORM_GPIO) && defined(LOSCFG_NIOBE407_USE_201_HDF)) {
    hcs_sources = [ "hdf_gpio.hcs" ] 
  } else if (defined(LOSCFG_DRIVERS_HDF_PLATFORM_SPI) && defined(LOSCFG_NIOBE407_USE_202_HDF)) {
    hcs_sources = [ "hdf_spi.hcs" ] 
  } else if (defined(LOSCFG_DRIVERS_HDF_PLATFORM_UART) && defined(LOSCFG_NIOBE407_USE_203_HDF)) {
    hcs_sources = [ "hdf_uart.hcs" ] 
  } else if (defined(LOSCFG_FS_LITTLEFS) && defined(LOSCFG_DRIVERS_HDF_PLATFORM_SPI) && defined(LOSCFG_DRIVERS_HDF_PLATFORM_GPIO)) {
    hcs_sources = [ "hdf_littlefs.hcs" ]
  } else if (defined(LOSCFG_DRIVERS_HDF_PLATFORM_WATCHDOG) && defined(LOSCFG_NIOBE407_USE_205_HDF)){
    hcs_sources = [ "hdf_watchdog.hcs" ]
  }
  
  visibility += [
    "$device_path",
    ".",
  ]
}
